# Fluidity

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  qt_ver.cmake
Fluidify/: CMakeLists.txt  cmake_install.cmake  config.yml
Fluidify/Fluidify_autogen/: mocs_compilation_Debug.cpp
Fluidify/Fluidify_autogen/include_Debug/4D4ZUJS57P/: moc_OpenGLViewport.cpp  moc_OpenGLViewport.cpp.d
Fluidify/Fluidify_autogen/include_Debug/MMRTY3H5TE/: moc_openGLWindow.cpp  moc_openGLWindow.cpp.d
Fluidify/Fluidify_autogen/include_Debug/R3WADQZVW2/: moc_FluidMainWindow.cpp  moc_FluidMainWindow.cpp.d
Fluidify/Fluidify_autogen/include_Debug/UVLADIE3JM/: moc_fluidify.cpp  moc_fluidify.cpp.d
Fluidify/Fluidify_autogen/include_Debug/qt/ui/: ui_FluidMainWindow.h
Fluidify/assets/shader/: passthrough_col_vert.glsl  passthrough_vert.glsl  tiling_frag.glsl  tiling_vert.glsl  uni_color_rec_frag.glsl
Fluidify/src/: Config.cpp  Config.h  Core.h  Log.cpp  Log.h  fluidify.cpp  main.cpp
Fluidify/src/graphics/: Input.h
Fluidify/src/graphics/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Fluidify/src/graphics/integration/: OpenGLViewport.cpp  OpenGLViewport.h  SimulationViewport.cpp  SimulationViewport.h
Fluidify/src/opengl/: openGLWindow.cpp  openGLWindow.h
Fluidify/src/opengl/instanced/: rectangleWindow.cpp  rectangleWindow.h  sampleWindow.cpp  sampleWindow.h
Fluidify/src/qt/: FluidMainWindow.cpp  FluidMainWindow.h  FluidMainWindow.ui
Fluidify/src/qt/ui/: FluidMainWindow.ui  ui_FluidMainWindow.h
Simulation/: CMakeLists.txt  cmake_install.cmake
Simulation/include/Simulation/: Grid.h  Log.h  Sim.h  Solver.h  SolverInterface.h
Simulation/src/: Solver.cpp  lib.cpp
